--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           font-weight: bold;
           padding: 0 5px;
         "
-        >Name</label
+        >Name:</label
       >
       <input
         type="text"
